--- a/front/style.css
+++ b/front/style.css
@@ -112,16 +112,16 @@ nav ul {
   text-align: justify;
 }
 
-#firstMovie_section > div > div > button {
+#firstMovie_button {
   padding: 0.5rem;
   opacity: 80%;
 }
 
-#firstMovie_section > div > div > button:hover {
+#firstMovie_button:hover {
   opacity: 100%;
 }
 
-#firstMovie_section > div > div > button > i {
+#firstMovie_button > i {
   padding: 0 0.5rem 0 0;
 }
 
@@ -135,8 +135,6 @@ nav ul {
   object-fit: contain;
   width: 100%;
   height: 100%;
-  z-index: -1;
-
 }
 
 #categories {
@@ -151,6 +149,74 @@ nav ul {
   text-align: center;
 }
 
-#categories > section > div > a {
+/*#categories > section > div > a {
   padding: 0 0.3rem 0 0;
+}*/
+
+.category_carousel {
+  overflow: hidden;
+  position: relative;
+}
+
+.slides_container {
+  display: flex;
+  width: 100%;
+}
+
+.carousel_arrow {
+  position: absolute;
+  display: flex;
+  top: 0;
+  bottom: 0;
+  margin: auto;
+  height: 4rem;
+  background-color: #fff;
+  border: none;
+  width: 2rem;
+  font-size: 3rem;
+  padding: 0;
+  cursor: pointer;
+  opacity: 0.5;
+  transition: opacity 100ms;
+}
+
+.carousel_arrow:hover,
+.carousel_arrow:focus {
+  opacity: 1;
+}
+
+#previous_arrow {
+  left: 0;
+  padding-left: 0.25rem;
+  border-radius: 0 2rem 2rem 0;
+}
+
+#next_arrow {
+  right: 0;
+  padding-left: 0.75rem;
+  border-radius: 2rem 0 0 2rem;
+}
+
+.slides_container > a {
+  width: 100%;
+  height: 100%;
+  flex: 1 0 25%;
+}
+
+.close {
+  display: none;
+}
+
+.open {
+  display: flex;
+  flex-direction: column;
+  z-index: 1;
+  background-color: #202020;
+  position: fixed;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  max-width: 1400px;
+  width: 70%;
+  height: 70%;
 }
